# client_calculator

./: .env.production  .gitignore  Cargo.toml  MOBILE_IMPLEMENTATION.md  README.md  index.html  mobile-test.html  next.config.ts  package.json  pnpm-lock.yaml  pricing.xlsx  sample-pricing.csv  tsconfig.json  vite.config.ts
assets/: index-B-w25W20.css  index-B2I_lNf1.js  index-BC0G2sMP.css  index-BTs1Ajw6.css  index-Be0Q0aZE.js  index-Bev-x3PD.js  index-C560QXUP.js  index-CgH4e7If.js  index-CjtQOhy7.js  index-CzTFWk4Q.js  index-D6jlKl4P.css  index-DaWA7MR2.js  index-LTe26_x3.js  index-X0yIchFM.js  index-dC7TuznW.js  index-qB6VMh3o.js  index-zorv5Xqz.css
client/: index.html
client/public/: 404.html  pricing.xlsx  sample-pricing.csv
client/src/: App.tsx  const.ts  index.css
client/src/components/: CalculatorRow.tsx  CartTab.tsx  CategorySection.tsx  InvoiceConfigForm.tsx  InvoicePDF.tsx  InvoicePreview.tsx  MobileFilterDrawer.tsx
client/src/components/invoice/: InvoiceConfigForm.tsx  InvoicePreview.tsx  InvoiceTemplate.tsx  SendInvoiceDialog.tsx
client/src/components/ui/: input.tsx  scrolling-text.tsx  (+4 more)
client/src/hooks/: useMobileDetect.ts
client/src/lib/: calculator.ts
client/src/pages/: Home.tsx
client/src/store/: calculator.ts
data/: pricing.csv
scripts/: build-pricing-data.js
shared/: invoice-types.ts  types.ts
src/: main.rs
src/app/: layout.tsx  page.tsx
src/components/: CalculatorRow.tsx  CategorySection.tsx
src/components/invoice/: InvoiceConfigForm.tsx
src/lib/: calculator.ts
src/pages/: _app.tsx  index.tsx
templates/: index.html
(+34 files in other folders)
