[package]
name = "client_calculator"
version = "0.1.0"
edition = "2024"

[dependencies]
# Axum 0.8.x (uses Hyper 1.x under the hood)
axum = { version = "0.8.6", features = ["form", "tokio"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }

# Templates
askama = "0.14.0"

# CSV + serde
csv = "1.4.0"
serde = { version = "1", features = ["derive"] }

# Misc
once_cell = "1.19.0"